[project]
name = "chromatic"
version = "0.1.0"
description = ""
authors = [
    {name = "mocha8686",email = "june.mocha8686@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyqt6 (>=6.9.0,<7.0.0)",
    "pyaudio (>=0.2.14,<0.3.0)",
    "pyqtgraph (>=0.13.7,<0.14.0)",
    "numpy (>=2.2.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.pyright]
venvPath = "."
venv = ".venv"
